Initial improvmeents over login and stuff

--- a/default_header.html
+++ b/default_header.html
@@ -1,34 +1,29 @@
 <DOCTYPE html>
 <html>
-<head>
-<style type = "text/css">
-
-#title_link:link {
-    color: black;
-    text-decoration: black;
-}
-
-#title_link:visited {
-    color: black;
-    text-decoration: black;
-}
-
-#title_link:hover {
-    color: black;
-    text-decoration: black;
-}
-
-#title_link:active {
-    color: black;
-    text-decoration: black;
-}
-
-</style>
+    <head>
+        <style type = "text/css">
+            #title_link:link {
+                color: black;
+                text-decoration: black;
+            }
+            #title_link:visited {
+                color: black;
+                text-decoration: black;
+            }
+            #title_link:hover {
+                color: black;
+                text-decoration: black;
+            }
+            #title_link:active {
+                color: black;
+                text-decoration: black;
+            }
+    </style>
 </head>
-
 <body>
-  <a href = "usage.php" id = "title_link"><h1 style = "font-size:72px;"> Council Track </h1></a>
+    <a href="usage.php" id="title_link">
+        <h1 style="font-size:72px;"> Council Track </h1>
+    </a>
 	<hr style="height: 5px; background-color: #333;">
 </body>
-
 </html>
