--- a/default_header.html
+++ b/default_header.html
@@ -18,11 +18,14 @@
                 color: black;
                 text-decoration: black;
             }
+			h1 {
+				text-align: center;
+			}
     </style>
 </head>
 <body>
     <a href="usage.php" id="title_link">
-        <h1 style="font-size:72px;"> Council Track </h1>
+        <h1 style="font-size:80px;"> Council Track </h1>
     </a>
 	<hr style="height: 5px; background-color: #333;">
 </body>
