--- a/header.html
+++ b/header.html
@@ -1,6 +1,6 @@
 <div class="row">
 	<div class="col mx-auto">
-		<p class="h1 text-center pt-4" onclick="location.href='main.php'"> Council Track </p>
+		<p class="h1 text-center pt-4" onclick="location.href='main.php'" style="cursor: pointer;"> Council Track </p>
 		<hr style="height:5px; border:none; color:#333; background-color:#333;">
 	</div>
 </div>
